# HTTP_Server

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  redeploy.sh
data/: todos.txt
src/: file_utils.cpp  http_request.cpp  http_request.h  http_response.cpp  http_response.h  http_server.cpp  http_server.h  logger.cpp  logger.h  main.cpp  router.cpp  router.h  static_file_handler.cpp  static_file_handler.h  string_utils.cpp  string_utils.h  todo_service.cpp  todo_service.h
static/: style.css
templates/: index.html
